--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <div class="top-menu">
-            <p><strong>Header Logo</strong></p>
+            <p>Header Logo</p>
                 <ul class="menu-list"> 
                     <li>header link one</li>
                     <li>header link two</li>
@@ -13,7 +14,12 @@
                 </ul>
         </div>
         <div class="top-body">
-            <p>test</p>
+            <div class="left-block">
+                <p>test</p>
+            </div>
+            <div class="right-block">
+                <p>test</p>
+            </div>
         </div>
         <div class="mid-body-1">
             <p>test</p>
@@ -23,6 +29,9 @@
         </div>
         <div class="bottom-body">
             <p>test</p>
+            <div class="squares">
+                <p>test</p>
+            </div>
         </div>
     </body>
     <footer>
