--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
         </div>
         <div class="top-body">
             <div class="left-block">
-                <p>test</p>
+                <p class="hero-text">This website is awesome</p>
+                <p class="sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                <div class="signup-button"><p>Sign up</p></div>
             </div>
             <div class="right-block">
-                <p>test</p>
+                <p>this is a placeholder for an image</p>
             </div>
         </div>
         <div class="mid-body-1">
