Finished styling top portion of website and adapted width for mobile devices

--- a/index.html
+++ b/index.html
@@ -5,40 +5,50 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="top-menu">
-            <p>Header Logo</p>
-                <ul class="menu-list"> 
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
-                </ul>
-        </div>
-        <div class="top-body">
-            <div class="left-block">
-                <p class="hero-text">This website is awesome</p>
-                <p class="sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
-                <div class="signup-button"><p>Sign up</p></div>
+        <div class="background-top">
+            <div class="top-menu">
+                <p>Header Logo</p>
+                    <ul class="menu-list"> 
+                        <li>header link one</li>
+                        <li>header link two</li>
+                        <li>header link three</li>
+                    </ul>
             </div>
-            <div class="right-block">
-                <p>this is a placeholder for an image</p>
+            <div class="top-body">
+                <div class="left-block">
+                    <p class="hero-text">This website is awesome</p>
+                    <p class="sub-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <div class="signup-button"><p>Sign up</p></div>
+                </div>
+                <div class="right-block">
+                    <p>this is a placeholder for an image</p>
+                </div>
             </div>
         </div>
-        <div class="mid-body-1">
-            <p>test</p>
-        </div>
-        <div class="mid-body-2">
-            <p>test</p>
-        </div>
-        <div class="bottom-body">
-            <p>test</p>
-            <div class="squares">
+        <div class="background-mid-1">
+            <div class="mid-body-1">
                 <p>test</p>
             </div>
         </div>
-    </body>
-    <footer>
-        <div class="footer-info">
-            <p>test</p>
+        <div class="background-mid-2">
+            <div class="mid-body-2">
+                <p>test</p>
+            </div>
         </div>
+        <div class="bottom-body">
+            <div class="bottom-body">
+                <p>test</p>
+                <div class="squares">
+                    <p>test</p>
+                </div>
+            </div>
+        </div>
+        </body>
+        <footer>
+            <div class="footer-background">
+                <div class="footer-info">
+                    <p>test</p>
+                </div>
+            </div>
     </footer>
 </html>
