Added HTML for following section and started working on styling sheet

--- a/index.html
+++ b/index.html
@@ -27,7 +27,41 @@
         </div>
         <div class="background-mid-1">
             <div class="mid-body-1">
-                <p>test</p>
+                <p>Some random information.</p>
+            </div>
+            <div class="squares-section">
+                <div class="square-container">
+                    <div class="square">
+
+                    </div>
+                    <div class="squaresub">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                </div>
+                <div class="square-container">
+                    <div class="square">
+
+                    </div>
+                    <div class="squaresub">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                </div>
+                <div class="square-container">
+                    <div class="square">
+
+                    </div>
+                    <div class="squaresub">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                </div>
+                <div class="square-container">
+                    <div class="square">
+
+                    </div>
+                    <div class="squaresub">
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="background-mid-2">
@@ -38,9 +72,6 @@
         <div class="bottom-body">
             <div class="bottom-body">
                 <p>test</p>
-                <div class="squares">
-                    <p>test</p>
-                </div>
             </div>
         </div>
         </body>
