--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
         </div>
         <div class="background-mid-2">
             <div class="mid-body-2">
-                <p>test</p>
+                <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</p>
+            </div>
+            <div class="mid-body-2-author">
+                <p>-Thor, God of Thunder</p>
             </div>
         </div>
         <div class="bottom-body">
