Fixed bug on third section and implemented styling for fourth section

--- a/index.html
+++ b/index.html
@@ -72,9 +72,13 @@
                 <p>-Thor, God of Thunder</p>
             </div>
         </div>
-        <div class="bottom-body">
+        <div class="background-bottom">
             <div class="bottom-body">
-                <p>test</p>
+                <div class="paragraph">
+                    <p class="paragraph-header"><strong>Call to Action! It's time!</strong></p>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="signup-button"><p>Sign Up</p></div>
             </div>
         </div>
         </body>
