Fixed final sign up button and CTA borders and added footer - First version of project finished

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <footer>
             <div class="footer-background">
                 <div class="footer-info">
-                    <p>test</p>
+                    <p>Copyright © The Odin Project</p>
                 </div>
             </div>
     </footer>
